--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,5 +11,6 @@
             <li><a href="/events/create">Create Event</a></li>
         </ul>
     </nav>
+    <td th:fragment = "address">1234 1st Street</td>
 </body>
 </html>
