--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -9,9 +9,9 @@
     <nav th:replace="fragments :: navigation"></nav>
     <form method = "post" action="/events/create">
         <label>Enter Name:</label>
-        <input type="text" name="eventName">
+        <input type="text" name="name">
         <label>Enter Description:</label>
-        <input type="text" name="eventTag">
+        <input type="text" name="description">
         <input type="submit" value="Create Event">
     </form>
 </body>
