--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -11,9 +11,9 @@
     <table>
         <th:block th:each = "event : ${events}">
             <tr>
-                <td th:text = "${event.key}"></td>
-                <td th:text = "${event.value}"></td>
-                <td th:replace = "fragments :: address"></td>
+                <td th:text = "${event.name}"></td>
+                <td th:text = "${event.description}"></td>
+                <td th:text = "${event.id}"></td>
         </th:block>
     </table>
 </body>
