--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,8 +9,8 @@
         <ul>
             <li><a href="/events">All Events</a></li>
             <li><a href="/events/create">Create Event</a></li>
+            <li><a href="/events/delete">Delete Events</a></li>
         </ul>
     </nav>
-    <td th:fragment = "address">1234 1st Street</td>
 </body>
 </html>
