--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -14,6 +14,9 @@
                 <td th:text = "${event.name}"></td>
                 <td th:text = "${event.description}"></td>
                 <td th:text = "${event.id}"></td>
+                <td>
+                    <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
+                </td>
         </th:block>
     </table>
 </body>
